<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xsens_mti_driver</name>
  <version>0.0.0</version>
  <description>ROS2 driver for XSENS MTi-630R IMU</description>
  <maintainer email="pranjal.sinha024@gmail.com">StrikePS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-serial</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
